--- a/demo_proj/wiki/html/pandoc.css
+++ b/demo_proj/wiki/html/pandoc.css
@@ -12,6 +12,26 @@ body {
 
 }
 
+ol {
+  list-style: none;
+  counter-reset: my-awesome-counter;
+}
+li {
+  counter-increment: my-awesome-counter;
+  margin: 0.25rem;
+}
+li::before {
+  content: counter(my-awesome-counter);
+  background: #662974;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  display: inline-block;
+  line-height: 2rem;
+  color: white;
+  text-align: center;
+  margin-right: 0.5rem;
+}
 a {
 	color: #F7CAC9;
 }
