--- a/demo_proj/wiki/html/pandoc.css
+++ b/demo_proj/wiki/html/pandoc.css
@@ -6,13 +6,17 @@ body {
   margin-right: 5%;
   font-size: 1.4em;
   padding: 2%;
-	text-shadow: 0px 0px 10px #F7CAC9,
-	         0px 0px 20px #F7CAC9,
-	         0px 0px 30px #F7CAC9;
+
 
 }
 
-ol {
+h1 {
+		text-shadow: 0px 0px 10px #F7CAC9,
+	         0px 0px 20px #F7CAC9,
+	         0px 0px 30px #F7CAC9;
+}
+
+ul {
   list-style: none;
   counter-reset: my-awesome-counter;
 }
@@ -22,15 +26,18 @@ li {
 }
 li::before {
   content: counter(my-awesome-counter);
-  background: #662974;
+  background: #456BD9;
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
+  border: 0.1875em solid #0F1C3F;
+
   display: inline-block;
   line-height: 2rem;
   color: white;
   text-align: center;
   margin-right: 0.5rem;
+
 }
 a {
 	color: #F7CAC9;
