--- a/project-project-vue/src/assets/_globalStyleSheet.scss
+++ b/project-project-vue/src/assets/_globalStyleSheet.scss
@@ -2,16 +2,35 @@ $cyan: #00FFFF;
 $spacegrey: #191d20;
 $pink: #ff3f81;
 $gold: #B7938A;
+$green: #42b983;
+$clayblue: #2c3e50;;
+$grey: #212121;
+
+body{
+	background-color: $grey;
+}
 
 .alekFocus {
-  border: 5px solid $pink;
+  border: 5px solid $green;
 }
 
 .kevinFocus {
-  color: $cyan;
+	background-color: $green;
+	background-color: $gold;
+	border-radius: 5px;
+	color: $grey;
 }
 
 .selectedFocus {
-  color: $gold;
+	border: 5px solid $cyan;
+	// .title{
+	//   color: $cyan;
+
+	// }
+}
+
+ul{
+	list-style-type: none;
+	padding-left: 1rem;
 }
 
