--- a/project-project-vue/src/components/TextCard/styles.scss
+++ b/project-project-vue/src/components/TextCard/styles.scss
@@ -1,6 +1,8 @@
 .textCard {
-	color: white;
+	color: $gold;
 	background-color: $spacegrey;
+	padding: 2rem 1rem;
+	padding-top: 1rem;
 	border-radius: 20px;
 	width: 300px;
 	height: 400px;
@@ -14,6 +16,10 @@
 
 	&:focus, .alekFocus {
 		border: 5px solid $pink;
+	}
+
+	.subtask{
+		padding-left: 2rem;
 	}
 
 	overflow-y: scroll;
