big merge part alekk

--- a/project-project-vue/src/assets/_globalStyleSheet.scss
+++ b/project-project-vue/src/assets/_globalStyleSheet.scss
@@ -1,9 +1,11 @@
 $cyan: #00FFFF;
 $spacegrey: #191d20;
 $pink: #ff3f81;
-$gold: #B7938A;
-$green: #42b983;
-$clayblue: #2c3e50;;
+// $gold: #B7938A;
+$gold: #f54076;
+/* $green: #42b983;  */
+$green: #8ceb34;
+$clayblue: #2c3e50;
 $grey: #212121;
 
 body{
