--- a/project-project-vue/src/assets/_globalStyleSheet.scss
+++ b/project-project-vue/src/assets/_globalStyleSheet.scss
@@ -1,9 +1,10 @@
 $cyan: #00FFFF;
-$spacegrey: #191d20;
-$pink: #ff3f81;
-// $gold: #B7938A;
-$gold: #f54076;
-/* $green: #42b983;  */
+/* $spacegrey: #191d20; */
+$spacegrey: #000000;
+/* $pink: #ff3f81; */
+$pink: #ffffff;
+/* $gold: #f54076; */
+$gold: #ffffff;
 $green: #8ceb34;
 $clayblue: #2c3e50;
 $grey: #212121;
