looking mad clean

--- a/project-project-vue/src/assets/_globalStyleSheet.scss
+++ b/project-project-vue/src/assets/_globalStyleSheet.scss
@@ -6,8 +6,10 @@ $pink: #ffffff;
 /* $gold: #f54076; */
 $gold: #ffffff;
 $green: #8ceb34;
-$clayblue: #2c3e50;
-$grey: #212121;
+/*$clayblue: #2c3e50;*/
+/*$grey: #212121;*/
+$clayblue: #d5e0d8;
+$grey: #d5e0d8;
 
 body{
 	background-color: $grey;
