--- a/project-project-vue/src/assets/_globalStyleSheet.scss
+++ b/project-project-vue/src/assets/_globalStyleSheet.scss
@@ -5,11 +5,10 @@ $spacegrey: #000000;
 $pink: #ffffff;
 /* $gold: #f54076; */
 $gold: #ffffff;
-$green: #8ceb34;
-/*$clayblue: #2c3e50;*/
-/*$grey: #212121;*/
+$green: #00ff00;
 $clayblue: #d5e0d8;
-$grey: #d5e0d8;
+$grey: #bcbfcc;
+$altgrey: #000000;
 
 body{
 	background-color: $grey;
@@ -23,7 +22,7 @@ body{
 	background-color: $green;
 	background-color: $gold;
 	border-radius: 5px;
-	color: $grey;
+	color: $altgrey;
 }
 
 .selectedFocus {
