--- a/src/assets/_globalStyleSheet.scss
+++ b/src/assets/_globalStyleSheet.scss
@@ -22,7 +22,7 @@ body{
 	background-color: $green;
 	background-color: $gold;
 	border-radius: 5px;
-	color: $altgrey;
+	color: $altgrey !important;
 }
 
 .selectedFocus {
